# DomeOS

./: .exrc  .gitignore  CMakeLists.txt  Makefile  README.md  SConstruct  boot_sect.asm  linker.ld  print_string.asm  real_mode.asm
boot/: CMakeLists.txt  SConscript  boot.asm  boot.h  boot_sect.asm  descriptor_tables.asm  gdt.asm  isr.asm  long_mode.asm  multiboot.asm  multiboot2  multiboot2.asm
boot/bootloader/: prot_mode.asm
boot/stage0/: CMakeLists.txt  stage0.asm
include/: error.h  gdt.h  idt.h  interrupts.h  io.h  irq.h  isr.h  kernel.h  logging.h  multiboot.h  multiboot2.h  paging.h  printf.h  screen.h  serial.h  string.h  util.h
include/boot/: multiboot.h
include/util/: err.h  string.h  util.h
kernel/: CMakeLists.txt  Cargo.toml  SConscript  clock.c  clock.h  domeos.json  gdt.c  gdt.h  idt.c  idt.h  irq.c  irq.h  isr.c  isr.h  kernel.c  rust-toolchain  screen.c  screen.h
kernel/.cargo/: config
kernel/common/: Cargo.toml
kernel/common/src/: globals.rs  lib.rs
kernel/common/src/error/: memory.rs  mod.rs
kernel/helpers/ld-link-map/: Cargo.toml
kernel/helpers/ld-link-map/src/: lib.rs  main-resolve.rs  main-to-packed.rs  packed.rs  text.rs
kernel/helpers/patcher/: Cargo.toml
kernel/helpers/patcher/src/: main.rs
kernel/kernel/: Cargo.toml
kernel/kernel/src/: apic.rs  clock.rs  cpu.rs  cpuid.rs  error.rs  exception.rs  io.rs  irq.rs  lib.rs  logging.rs  panic.rs  serial.rs  spinlock.rs  start.rs  vga.rs
kernel/kernel/src/acpi/: mod.rs  rsdp.rs  rsdt.rs  util.rs
kernel/kernel/src/acpi/sdts/: fadt.rs  mod.rs
kernel/kernel/src/descriptor_tables/: common.rs  gdt.rs  idt.rs  mod.rs  tss.rs
kernel/kernel/src/exception/: exception.rs  mod.rs  page_fault.rs
kernel/kernel/src/interrupts/: apic.rs  i8259.rs  init.rs  mod.rs
kernel/kernel/src/memory/: README.md  address_space.rs  constants.rs  free_pages.rs  heap.rs  init.rs  mapping.rs  mod.rs  page_table.rs  phys.rs  stack.rs  virt.rs
kernel/kernel/src/multiboot/: generated.rs  memory_map.rs  mod.rs
kernel/kernel/src/process/: block.rs  error.rs  load.rs  mod.rs  stack.rs
kernel/kernel/src/process/block/: id.rs  mod.rs  process.rs  thread.rs
kernel/kernel/src/ps2/: controller.rs  mod.rs
kernel/kernel/src/syscall/: README.md  mod.rs
kernel/memory/: Cargo.toml
kernel/memory/src/: address.rs  address_space.rs  constants.rs  custom_entry.rs  entry.rs  entry_builder.rs  error.rs  frame.rs  hierarchy.rs  lib.rs  page_table.rs
kernel/pe/: Cargo.toml
kernel/pe/src/: address.rs  cursor.rs  error.rs  lib.rs  parse.rs  types.rs
kernel/pe/src/types/: coff.rs  mod.rs  optional.rs  section.rs
kernel/pe/src/types/data_directory/: mod.rs
kernel/src/: clock.rs  exception.rs  idt.rs  io.rs  irq.rs  lib.rs  memory.rs  panic.rs  serial.rs  start.rs  vga.rs
kernel/src/memory/: address.rs  frames.rs  free_pages.rs  mapping.rs  mod.rs  page_table.rs  virt.rs
kernel/src/multiboot/: memory_map.rs  mod.rs
kernel/userspace/syscall/: Cargo.toml
kernel/userspace/syscall/src/: error.rs  lib.rs  result.rs
kernel/util/: err.h  io.c  io.h  string.c  string.h  util.h
kernel/utils/: Cargo.toml
kernel/utils/src/: error.rs  globals.rs  lib.rs
kernel/utils/src/memory/: address.rs  address_space.rs  constants.rs  frame.rs  hierarchy.rs  mod.rs  page_table.rs
kernel_utils/: Cargo.toml
kernel_utils/src/: lib.rs
kernel_utils/src/memory/: address.rs  mod.rs  page_table.rs
ld-link-map/: Cargo.toml
ld-link-map/src/: lib.rs  main.rs  map.rs  output.rs
src/: clock.c  error.c  gdt.c  idt.c  interrupts.c  io.c  irq.c  isr.c  kernel.c  logging.c  multiboot.c  paging.c  printf.c  screen.c  serial.c  string.c
src/boot/: multiboot.asm
src/util/: io.c  string.c
testing/: Makefile  string_tests.c  testing.c  testing.h
tests/: Makefile  error_tests.c  string_tests.c  tests.c  tests.h
userspace/: Makefile  README.md  nop.c  syscall.s
userspace/syscall-c/: Makefile  printf.c  printf.h  syscall.c
utils/src/: globals.rs  lib.rs
utils/src/memory/: address.rs  hierarchy.rs  mod.rs  page_table.rs
