project(DomeOS_kernel)

set(CARGO_BUILD_CMD cargo build)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CARGO_TARGET_DIR "debug")
else()
    set(CARGO_BUILD_CMD ${CARGO_BUILD_CMD} --release)
    set(CARGO_TARGET_DIR "release")
endif()

set(KERNEL_FILE libdomeos_kernel.a)
set(KERNEL_TARGET "${CMAKE_CURRENT_BINARY_DIR}/domeos/${CARGO_TARGET_DIR}/${KERNEL_FILE}")
add_custom_target(${PROJECT_NAME}_cargo ALL
                  COMMAND CARGO_TARGET_DIR=${CMAKE_CURRENT_BINARY_DIR} ${CARGO_BUILD_CMD}
                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC IMPORTED GLOBAL)
set_property(TARGET ${PROJECT_NAME} PROPERTY IMPORTED_LOCATION ${KERNEL_TARGET})
#set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS 1)

add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_cargo)
