[workspace]

members = [
    "kernel",
    "common",
    "memory",
    "pe",
    "userspace/syscall",
    # build helpers
    "helpers/ld-link-map",
    "helpers/patcher",
    # drivers
    "drivers/helpers/ps2",
]

default-members = ["kernel"]

# ux overflows the stack constantly
[profile.dev.package.ux]
opt-level = 1
debug = 0