[package]
name = "common"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13"
derive_more = "0.99"
displaydoc = { version = "0.1", default-features = false }
log = "0.4"
anyhow = {version = "1.0", default-features = false}

[features]
default = []
std = []