[package]
name = "domeos-kernel"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory = { path = "../memory" }
common = { path = "../common" }
pe = { path = "../pe" }
ld-link-map = { path = "../helpers/ld-link-map", default-features = false }

spin = "0.7"
volatile = "0.4"
modular-bitfield = "0.11"
enumflags2 = "0.6"
bitfield = "0.13"
bit_field = "0.10"
buddy_system_allocator = "0.7"
smallvec = { version = "1.6", features = ["union"] } # 1.49+
memoffset = { version = "0.6", features = ["unstable_const"] }

[features]
default = []
log-heap = []
