[package]
name = "memory"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

enumflags2 = "^0.6"
c2rust-bitfields = { version = "^0.3", features = ["no_std"] }

[features]
default = []
std = []

[dev-dependencies]
env_logger = "0.8"