[package]
name = "memory"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

enumflags2 = "^0.6"
modular-bitfield = "0.11"

[features]
default = []
std = []
log-paging = []

[dev-dependencies]
env_logger = "0.8"