[package]
name = "pe"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

byte = "0.2"
enumflags2 = "0.6"
bitflags = "1.2"
#strum = { version = "0.20", features = ["derive"] } # not no_std :(