[package]
name = "utils"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "^0.6"
bitfield = "^0.13"
derive_more = "^0.99"
c2rust-bitfields = { version = "^0.3", features = ["no_std"] }
displaydoc = { version = "0.1", default-features = false }
log = "0.4"

[features]
default = []
std = []

[dev-dependencies]
env_logger = "0.8"