[package]
name = "ld-link-map"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create-packed"
path = "src/main-to-packed.rs"

[[bin]]
name = "search-resolve"
path = "src/main-resolve.rs"

[dependencies]
byteorder = {version = "1.4", default-features = false}
rustc-demangle = {version = "0.1", optional = true}

[features]
default = ["std"]
std = ["rustc-demangle"]